shared/src/test/data/yeast/invalid-json/trailing-comma-seq.jyt
BeginDocument       0,  1,  0 ''
BeginSequence       0,  1,  0 '['
BeginScalar         1,  1,  1 ''
Text                1,  1,  1 '1'
EndScalar           2,  1,  2 ''
Indicator           2,  1,  2 ','
BeginScalar         3,  1,  3 ''
Text                3,  1,  3 '2'
EndScalar           4,  1,  4 ''
Indicator           4,  1,  4 ','
BeginScalar         5,  1,  5 ''
Text                5,  1,  5 '3'
EndScalar           6,  1,  6 ''
Indicator           6,  1,  6 ','
EndSequence         7,  1,  7 ']'
